--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -24,11 +24,15 @@ nav:
     - Home: 'index.md'
     - 'Module One: Intro to React':
       - 'Pre-Class 1 Lessons': 
-        - Intro to Material-Mkdocs: module-1/lessonOutlineTemplate.md
-        - Class 1 TITLE: module-1/classOutlineTemplate.md
-      - 'Pre-Class 2 Lesson': 
-        - LESSON TITLE: module-1/lessonOutlineTemplate.md
-        - Class 2 TITLE: module-1/classOutlineTemplate.md
+        - Prepare Your Machine: preCourse/setupInstructions.md
+        - Succeed in this Course: preCourse/succeedInThisCourse.md
+        - Intro to React: module-1/introToReact.md
+        - CRA Overview: module-1/CRA-overview.md
+        - React DevTools: module-1/reactDeveloperTools-pt1.md
+        - Bonus - HTML + JSX: module-1/bonusLesson.md
+        - Class 1 TITLE: module-1/class-1.md
+      # - 'Pre-Class 2 Lesson': 
+        # - Class 2 TITLE: module-1/class-2.md
       # - 'Pre-Class 3 Lesson': 
       # - 'Pre-Class 4 Lesson': 
     # - 'Module Two: TITLE': 
