--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -30,7 +30,7 @@ nav:
         - CRA Overview: module-1/CRA-overview.md
         - React DevTools: module-1/reactDeveloperTools-pt1.md
         - Bonus - HTML + JSX: module-1/bonusLesson.md
-        - Class 1 TITLE: module-1/class-1.md
+        - Class 1 ToDo App: module-1/class-1.md
       # - 'Pre-Class 2 Lesson': 
         # - Class 2 TITLE: module-1/class-2.md
       # - 'Pre-Class 3 Lesson': 
