--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -35,11 +35,19 @@ nav:
         - State & Props Intro: module-1/introToStateAndProps.md
         - Fetch, Store, Render: module-1/fetchStoreRender.md
         - Class 2 Beer App: module-1/class-2.md
-      # - 'Pre-Class 3 Lesson': 
+      - 'Pre-Class 3 Lesson':
+        - Conditional Rendering: module-1/conditionalRendering.md
+        - Dynamic Rendering: module-1/dynamicRendering.md
+        - Class 3 Address Book: module-1/class-3.md
       # - 'Pre-Class 4 Lesson': 
     # - 'Module Two: TITLE': 
       # - 'Pre-Class 5 Lessons': 
         # - Class 5 TITLE: module-2/classOutlineTemplate.md
+            
+            # cp workspace/resources/templateFile.md docs/module-
+
+    # cp workspace/resources/classOutlineTemplate.md docs/module-
+
         # - 'Pre-Class 6 Lesson': 
         # - 'Pre-Class 7 Lesson': 
         # - 'Pre-Class 8 Lesson': 
@@ -53,8 +61,7 @@ nav:
         # - 'Pre-Class 14 Lesson': 
         # - 'Pre-Class 15 Lesson': 
         # - 'Pre-Class 16 Lesson':  
-    # cp workspace/resources/templateFile.md docs/module-
-    # cp workspace/resources/classOutlineTemplate.md docs/module-
+
     - 'Additional Resources':
       - Interview Training: additionalResources/interviewChallenges.md
       - Student Presentations: additionalResources/studentPresentations.md
@@ -62,6 +69,7 @@ nav:
       - 'Questions for Discussion Collections':
         - Day 1 QFD: additionalResources/questionsForDiscussion/qfd-class-1.md
         - Day 2 QFD: additionalResources/questionsForDiscussion/qfd-class-2.md
+        - Day 3 QFD: additionalResources/questionsForDiscussion/qfd-class-3.md
       - Blog Prompts: additionalResources/blogPrompts.md
       - Keyboard Shortcuts: additionalResources/keyboardShortcuts.md
       - Git & CLI Commands: additionalResources/gitCommands.md
