--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -48,12 +48,15 @@ nav:
       - 'Pre-Class 5 Lessons': 
         - Component Styling with Material-UI: module-2/componentStyling.md
         - Class 5 Music App 1/2: module-2/class-5.md
-            
+      - 'Pre-Class 6 Lessons':
+        - Class Component Lifecycle: module-2/componentLifeCycle.md
+        - Class 5: module-2/class-6.md
+
+
             # cp workspace/resources/templateFile.md docs/module-
 
     # cp workspace/resources/classOutlineTemplate.md docs/module-
 
-        # - 'Pre-Class 6 Lesson': 
         # - 'Pre-Class 7 Lesson': 
         # - 'Pre-Class 8 Lesson': 
       # - 'Module Three: TITLE': 
@@ -77,6 +80,7 @@ nav:
         - Day 3 QFD: additionalResources/questionsForDiscussion/qfd-class-3.md
         - Day 4 QFD: additionalResources/questionsForDiscussion/qfd-class-4.md
         - Day 5 QFD: additionalResources/questionsForDiscussion/qfd-class-5.md
+        - Day 6 QFD: additionalResources/questionsForDiscussion/qfd-class-6.md
       - Blog Prompts: additionalResources/blogPrompts.md
       - Keyboard Shortcuts: additionalResources/keyboardShortcuts.md
       - Git & CLI Commands: additionalResources/gitCommands.md
