--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -42,23 +42,27 @@ nav:
         - Class 3 Address Book: module-1/class-3.md
       - 'Pre-Class 4 Lesson':
         - Forms in React: module-1/formsInReact.md
-        - Hackthon Overview: module-1/hackathonOverview.md
+        - Hackathon Overview: module-1/hackathonOverview.md
         - Class 4 Hackathon: module-1/class-4.md
-    - 'Module Two: TITLE': 
+    - 'Module Two: Styling & Routing': 
       - 'Pre-Class 5 Lessons': 
         - Component Styling with Material-UI: module-2/componentStyling.md
         - Class 5 Music App 1/2: module-2/class-5.md
       - 'Pre-Class 6 Lessons':
         - Class Component Lifecycle: module-2/componentLifeCycle.md
         - Class 5: module-2/class-6.md
+      - 'Pre-Class 7 Lesson':
+        - React Router Intro: module-2/reactRouter.md
+        - Router Link: module-2/reactRouter-link.md
+        - Implement React Router: module-2/implement-ReactRouter.md
+        - Class 7: module-2/class-7.md
+        # - 'Pre-Class 8 Lesson': 
 
 
             # cp workspace/resources/templateFile.md docs/module-
 
     # cp workspace/resources/classOutlineTemplate.md docs/module-
 
-        # - 'Pre-Class 7 Lesson': 
-        # - 'Pre-Class 8 Lesson': 
       # - 'Module Three: TITLE': 
         # - 'Pre-Class 9 Lesson': 
         # - 'Pre-Class 10 Lesson': 
@@ -81,6 +85,7 @@ nav:
         - Day 4 QFD: additionalResources/questionsForDiscussion/qfd-class-4.md
         - Day 5 QFD: additionalResources/questionsForDiscussion/qfd-class-5.md
         - Day 6 QFD: additionalResources/questionsForDiscussion/qfd-class-6.md
+        - Day 7 QFD: additionalResources/questionsForDiscussion/qfd-class-7.md
       - Blog Prompts: additionalResources/blogPrompts.md
       - Keyboard Shortcuts: additionalResources/keyboardShortcuts.md
       - Git & CLI Commands: additionalResources/gitCommands.md
