finished class 12 and lesson for class 13

--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -76,20 +76,24 @@ nav:
         - Class 11: module-3/class-11.md
       - 'Pre-Class 12 Lessons': 
         - React Hooks: module-3/reactHooks-intro.md
-        - Capstone App: module-3/capstoneApp-planning-pt1.md
+        - Capstone App pt.1: module-3/capstoneApp-planning-pt1.md
         - Class 12: module-3/class-12.md
+      # https://studio.zollege.com/course/course-v1:ACA+JS411+09282020_JS411_C6?show=block-v1%3AACA%2BJS411%2B09282020_JS411_C6%2Btype%40chapter%2Bblock%404de0fa153217497aa24aea294018758d
+    - 'Module Four: App Design':
+      - 'Pre-Class 13 Lessons':
+        - Folder Structure: module-4/folderStructure.md
+        - Capstone App pt.2: module-4/capstoneApp-planning-pt2.md
+        - Class 13: module-4/class-13.md
 
-    # cp workspace/resources/templateFile.md docs/module-
+
+    # cp workspace/resources/templateFile.md docs/module-4/capstoneApp-planning-pt2.md
 
     # cp workspace/resources/classOutlineTemplate.md docs/module-
-      # - 'Module Four: TITLE':
-        # - 'Pre-Class 13 Lessons': 
-        # - Class 1: module-4/class-1.md
         # - 'Pre-Class 14 Lessons': 
         # - Class 1: module-4/class-1.md
         # - 'Pre-Class 15 Lessons': 
         # - Class 1: module-4/class-1.md
-        # - 'Pre-Class 16 Lessons':  
+        # - 'Pre-Class 16 Lessons':s
         # - Class 1: module-4/class-1.md
 
     - 'Additional Resources':
@@ -109,6 +113,7 @@ nav:
         - Day 10 QFD: additionalResources/questionsForDiscussion/qfd-class-10.md
         - Day 11 QFD: additionalResources/questionsForDiscussion/qfd-class-11.md
         - Day 12 QFD: additionalResources/questionsForDiscussion/qfd-class-12.md
+        - Day 13 QFD: additionalResources/questionsForDiscussion/qfd-class-13.md
       - Blog Prompts: additionalResources/blogPrompts.md
       - Keyboard Shortcuts: additionalResources/keyboardShortcuts.md
       - Git & CLI Commands: additionalResources/gitCommands.md
