--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -84,13 +84,15 @@ nav:
         - Folder Structure: module-4/folderStructure.md
         - Capstone App pt.2: module-4/capstoneApp-planning-pt2.md
         - Class 13: module-4/class-13.md
+        - Checkpoint Two: module-4/checkpointTwo-smallBizApp.md
+      - 'Pre-Class 14 Lessons':
+        - Capstone App pt.3: module-4/capstoneApp-planning-pt3.md
+        # - Class 1: module-4/class-1.md
 
-
-    # cp workspace/resources/templateFile.md docs/module-4/capstoneApp-planning-pt2.md
+    # https://studio.zollege.com/container/block-v1:ACA+JS411+09282020_JS411_C6+type@vertical+block@4a5549085a9c4af4817311ddf6f2bd5a
+    # cp workspace/resources/templateFile.md docs/module-4/
 
     # cp workspace/resources/classOutlineTemplate.md docs/module-
-        # - 'Pre-Class 14 Lessons': 
-        # - Class 1: module-4/class-1.md
         # - 'Pre-Class 15 Lessons': 
         # - Class 1: module-4/class-1.md
         # - 'Pre-Class 16 Lessons':s
