updated color scheme

--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -140,7 +140,7 @@ theme:
   palette:
     scheme: slate
     primary: black
-    accent: deep orange
+    accent: pink
     # Defines the logo in the top-left, file must be in the /doc directory
   logo: CE_WhiteBlue_Icon.png
   
