added info on MVP Shop git push

--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -94,6 +94,7 @@ nav:
         - Capstone App pt.4: module-4/capstoneApp-planning-pt4.md
         - Class 15: module-4/class-15.md
       - 'Pre-Class 16 Lessons':
+        - MVP Shop: module-4/mvpShopInfo.md
         - Deployment: module-4/deployment.md
         - Capstone App pt.5: module-4/capstoneApp-planning-pt5.md
         - Checkpoint Three: module-4/capstoneApp-checkpoint-3.md
