--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
         - Bonus - HTML + JSX: module-1/bonusLesson.md
         - Class 1 ToDo App: module-1/class-1.md
       - 'Pre-Class 2 Lessons':
+        - Develop I Must Succeed: module-1
         - State & Props Intro: module-1/introToStateAndProps.md
         - Fetch, Store, Render: module-1/fetchStoreRender.md
         - Class 2 Beer App: module-1/class-2.md
@@ -41,6 +42,7 @@ nav:
         - Dynamic Rendering: module-1/dynamicRendering.md
         - Class 3 Address Book: module-1/class-3.md
       - 'Pre-Class 4 Lessons':
+        - Develop Not Lazy: module-1/developSeries-stopBeingLazy.md
         - Forms in React: module-1/formsInReact.md
         - Hackathon Overview: module-1/hackathonOverview.md
         - Class 4 Hackathon: module-1/class-4.md
@@ -57,6 +59,7 @@ nav:
         - Implement React Router: module-2/implement-ReactRouter.md
         - Class 7: module-2/class-7.md
       - 'Pre-Class 8 Lessons':
+        - Develop Discipline: module-2/developSeries-discipline.md
         - Protected Routes: module-2/protectedRoutes-intro.md
         - Class 8 Login: module-2/class-8.md
     - 'Module Three: App State': 
@@ -81,10 +84,12 @@ nav:
       # https://studio.zollege.com/course/course-v1:ACA+JS411+09282020_JS411_C6?show=block-v1%3AACA%2BJS411%2B09282020_JS411_C6%2Btype%40chapter%2Bblock%404de0fa153217497aa24aea294018758d
     - 'Module Four: App Design':
       - 'Pre-Class 13 Lessons':
+        - Develop Not Wasting Time: module-4/developSeries-stopWastingTime.md
         - Folder Structure: module-4/folderStructure.md
         - Capstone App pt.2: module-4/capstoneApp-planning-pt2.md
         - Class 13: module-4/class-13.md
       - 'Pre-Class 14 Lessons':
+        - Develop I Can Do It: module-4/developSeries-ICanDoIt.md
         - NPM Build: module-4/npmBuild-intro.md
         - Capstone App pt.3: module-4/capstoneApp-planning-pt3.md
         - Class 14 Sm. Biz App: module-4/class-14.md
@@ -94,6 +99,7 @@ nav:
         - Capstone App pt.4: module-4/capstoneApp-planning-pt4.md
         - Class 15: module-4/class-15.md
       - 'Pre-Class 16 Lessons':
+        - Develop Commitment: module-4/developSeries-dominate2021.md
         - MVP Shop: module-4/mvpShopInfo.md
         - Deployment: module-4/deployment.md
         - Capstone App pt.5: module-4/capstoneApp-planning-pt5.md
