--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -63,6 +63,7 @@ nav:
         - Develop Discipline: module-2/developSeries-discipline.md
         - Protected Routes: module-2/protectedRoutes-intro.md
         - Authentication with FireBase: module-2/FireBase.md
+        - Protected Routes with FireBase: module-2/FireBase-Protected-Routes.md
         - Class 8 Login: module-2/class-8.md
     - 'Module Three: App State': 
       - 'Pre-Class 9 Lessons':
