--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
         - Class 10 Redux MDTP: module-3/class-10.md
       - 'Pre-Class 11 Lessons': 
         - Redux-Thunk: module-3/redux-thunk.md
+        - Intro to CRUD: module-3/crud-intro.md
         - Class 11 Redux-Thunk: module-3/class-11.md
       - 'Pre-Class 12 Lessons': 
         - React Hooks: module-3/reactHooks-intro.md
