initial data model setup

--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -83,7 +83,7 @@ nav:
         - Intro to CRUD: module-3/crud-intro.md
         - Class 11 Redux-Thunk: module-3/class-11.md
       - 'Pre-Class 12 Lessons': 
-        - React Hooks: module-3/reactHooks-intro.md
+        - Data Organization: module-3/dataOrganization.md
         - Capstone App pt.1: module-3/capstoneApp-planning-pt1.md
         - Class 12: module-3/class-12.md
       # https://studio.zollege.com/course/course-v1:ACA+JS411+09282020_JS411_C6?show=block-v1%3AACA%2BJS411%2B09282020_JS411_C6%2Btype%40chapter%2Bblock%404de0fa153217497aa24aea294018758d
