--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -206,6 +206,9 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.keys
   - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -215,7 +218,6 @@ markdown_extensions:
       clickable_checkbox: true
   - def_list
   - pymdownx.tabbed
-
 
  
 
