--- a/ebook-folder/mkdocs.yml
+++ b/ebook-folder/mkdocs.yml
@@ -109,6 +109,7 @@ nav:
         - Firebase Capstone Deployment: module-4/deploy-capstone-Firebase.md
         - Capstone App pt.5: module-4/capstoneApp-planning-pt5.md
         - Checkpoint Three: module-4/capstoneApp-checkpoint-3.md
+        - Deploying Your App: module-4/aGuideToDeployingYourApp.md
         - Class 16: module-4/class-16.md
 
       # https://studio.zollege.com/course/course-v1:ACA+JS411+09282020_JS411_C6?show=block-v1%3AACA%2BJS411%2B09282020_JS411_C6%2Btype%40chapter%2Bblock%40571217217d8a4fd7a17b286aa707411e
